SERVER-26188 Check for more possible interrupt error codes in Balancer code